# yandex-coursera

./: README.md  concurrent_map.cpp
black-belt/1-week/: add_solution.cpp  svg.cpp
black-belt/2-week/: json_printer.cpp  saveload.h
black-belt/2-week/YellowPages/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  company.pb.h  merge.cpp  phone.pb.cc  provider.pb.h  signal.pb.cc  test_runner.h  working_time.pb.cc
black-belt/2-week/YellowPages/protos/: address.pb.cc  address.pb.h  company.pb.cc  name.pb.cc  name.pb.h  phone.pb.h  provider.pb.cc  signal.pb.h  url.pb.cc  url.pb.h  working_time.pb.h
black-belt/3-week/: nucleotide.cpp
brown-belt/1-week/: hash_person.cpp  hash_point.cpp  hash_set.cpp  set_iterator_next.cpp
brown-belt/2-week/: collide.cpp  comment_server.cpp  refactoring.cpp  spendings_json.cpp  spendings_xml.cpp
brown-belt/3-week/: Solution.cpp  cache.cpp  concurrent_map_2.cpp  lazy_value.cpp  operator[].cpp  pipeline.cpp
brown-belt/4-week/: UniquePtr.cpp  domains.cpp
brown-belt/5-week/: budget.cpp  domains.cpp  domains_test.cpp
brown-belt/6-week/: README.md
red-belt/1-week/: deque_via_two_vectors.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  test_runner.h  update_field.cpp
red-belt/2-week/: booking.cpp  learner.cpp  slow_read.cpp
red-belt/3-week/: linked_list.cpp  object_pool.cpp  simple_vector.h  swap_sort_copy.cpp
red-belt/4-week/: athletes.cpp  stack_vector.cpp  stats.cpp  stats.h  text_editor_2.cpp
red-belt/5-week/: concurrent_map.cpp  explore_key_words.cpp  josephus_permutation.cpp  merge_sort_3.cpp  (+1 more)
(+96 files in other folders)
